[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/components/loading_label.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/components/ai_process_button.gd" type="Script" id=2]
[ext_resource path="res://themes/sub_theme.tres" type="Theme" id=3]
[ext_resource path="res://themes/main_theme.tres" type="Theme" id=4]

[node name="AIProcessButton" type="HBoxContainer"]
margin_right = 276.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 28 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
script = ExtResource( 2 )

[node name="ProcessButton" type="MarginContainer" parent="."]
margin_right = 276.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="AIProcessButton" type="Button" parent="ProcessButton"]
margin_right = 276.0
margin_bottom = 121.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )

[node name="LoadIcon" parent="ProcessButton" instance=ExtResource( 1 )]

[node name="Cancel" type="Button" parent="."]
visible = false
margin_left = 248.0
margin_top = 46.0
margin_right = 276.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 28 )
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
theme = ExtResource( 4 )
theme_type_variation = "TerminateButton"
text = "X"
icon_align = 1

[connection signal="pressed" from="ProcessButton/AIProcessButton" to="." method="_on_AIProcessButton_pressed"]
[connection signal="animation_ended" from="ProcessButton/LoadIcon" to="." method="_on_Overlay_animation_ended"]
[connection signal="animation_started" from="ProcessButton/LoadIcon" to="." method="_on_Overlay_animation_started"]
[connection signal="pressed" from="Cancel" to="." method="_on_Cancel_pressed"]
